[metadata]
name = indieweb-utils
version = 0.6.1
author = capjamesg
author_email = jamesg@jamesg.blog
description =  Utilities to aid the implementation of various IndieWeb specifications and functionalities.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/capjamesg/indieweb-utils
project_urls =
    Bug Tracker = https://github.com/capjamesg/indieweb-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src