[metadata]
name = indieweb-utils
version = 0.7.3
author = capjamesg
author_email = jamesg@jamesg.blog
description =  Utilities to aid the implementation of various IndieWeb specifications and functionalities.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/capjamesg/indieweb-utils
project_urls =
    Bug Tracker = https://github.com/capjamesg/indieweb-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mf2py==1.1.2
    requests==2.26.0
    beautifulsoup4==4.10.0
    lxml==4.9.1
    pyjwt==2.4.0
    jwt==1.3.1

[options.packages.find]
where = src